@@ -2,7 +2,10 @@ package com.harbor.partTime.service.impl;
 
 import cn.hutool.core.bean.BeanUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
+import com.harbor.common.domain.PageDTO;
+import com.harbor.common.domain.PageQuery;
 import com.harbor.partTime.domain.po.ApplicationPO;
 import com.harbor.partTime.domain.po.PartTimePO;
 import com.harbor.partTime.domain.vo.ApplicationRecordVO;
@@ -30,35 +33,57 @@ public class ApplicationServiceImpl extends ServiceImpl<ApplicationMapper, Appli
 
     /**
      * 获取用户申请记录集合
-     * @param userId
+     *
+     * @param pageQuery
      * @return
      */
     @Override
-    public List<ApplicationRecordVO> getMyApplications(Long userId) {
-        log.info("获取用户申请记录: {}", userId);
-        Assert.notNull(userId, "用户ID不能为空");
+    public PageDTO<ApplicationRecordVO> getMyApplications(PageQuery pageQuery) {
+        log.info("获取用户申请记录: {}", pageQuery.getId());
+        Assert.notNull(pageQuery.getId(), "用户ID不能为空");
 
-//        获取申请记录
-        List<ApplicationRecordVO> recordVOList = lambdaQuery().eq(ApplicationPO::getUserId, userId).list().stream().map(item ->
-        BeanUtil.copyProperties(item, ApplicationRecordVO.class)
-        ).toList();
-        if(recordVOList.isEmpty()){
-            return recordVOList;
+        Page<ApplicationPO> page = new Page<>(pageQuery.getPageNum(), pageQuery.getPageSize());
+
+        Page<ApplicationPO> applicationPage = lambdaQuery()
+                .eq(ApplicationPO::getUserId, pageQuery.getId())
+                .orderByDesc(ApplicationPO::getUpdateTime) // 按更新时间倒序
+                .page(page);
+        if (applicationPage.getRecords().isEmpty()) {
+            return null;
         }
-//        获取兼职信息
-        List<Long> jobsId = recordVOList.stream().map(ApplicationRecordVO::getPartTimeId).distinct().toList();
+        // 4. 转换为VO列表
+        List<ApplicationRecordVO> recordVOList = applicationPage.getRecords().stream()
+                .map(item -> BeanUtil.copyProperties(item, ApplicationRecordVO.class))
+                .toList();
+        // 5. 获取兼职信息
+        List<Long> jobsId = recordVOList.stream()
+                .map(ApplicationRecordVO::getPartTimeId)
+                .distinct()
+                .collect(Collectors.toList());
+
         List<PartTimePO> partTimePOS = partTimeMapper.selectList(new LambdaQueryWrapper<PartTimePO>()
                 .in(PartTimePO::getId, jobsId));
-        Map<Long, PartTimePO> partTimePOMap = partTimePOS.stream().collect(Collectors.toMap(PartTimePO::getId, Function.identity()));
-//        封装兼职信息
+
+        Map<Long, PartTimePO> partTimePOMap = partTimePOS.stream()
+                .collect(Collectors.toMap(PartTimePO::getId, Function.identity()));
+// 6. 封装兼职信息
         recordVOList.forEach(item -> {
             PartTimePO partTimePO = partTimePOMap.get(item.getPartTimeId());
-            item.setPartTimeTitle(partTimePO.getTitle());
-            item.setPartTimeLocation(partTimePO.getLocation());
-            item.setEmployer(partTimePO.getEmployer());
-            item.setSalaryDesc(partTimePO.getSalaryDesc());
+            if (partTimePO != null) {
+                item.setPartTimeTitle(partTimePO.getTitle());
+                item.setPartTimeLocation(partTimePO.getLocation());
+                item.setEmployer(partTimePO.getEmployer());
+                item.setSalaryDesc(partTimePO.getSalaryDesc());
+            }
         });
-        return recordVOList;
+
+        // 7. 返回分页结果
+        return new PageDTO<>(
+                applicationPage.getTotal(),
+                applicationPage.getPages(),
+                recordVOList
+        );
+
     }
 
     @Override
